# equine-lung-experts

./: .docker-compose.yml.swp  .dockerignore  .envrc  .eslintrc.js  .gitignore  Dockerfile  README.md  bin  compose.dev.yml  compose.yml  docker-compose-production.yml  docker-compose.yml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: deploy.yml  main.yml  test.yml
app/: .envrc  README.md  pyproject.toml
app/ele/: asgi.py  settings.py  urls.py  wsgi.py
client/: .dockerignore  Dockerfile  Dockerfile.prod
client-nginx/: Dockerfile-production
client-react/: Dockerfile
client/react-app/: package-lock.json  package.json
components/: Analytics.js  App.jsx  BalfSample.jsx  Contact.jsx  ContactForm.jsx  EnvironmentalConsulting.jsx  Footer.jsx  FooterListing.jsx  Header.jsx  Home.js  Link.jsx  Menu.jsx  NavMobile.jsx  PageNotFound.jsx  Resources.jsx  SocialTray.js  TOC.js
django/base_project/: asgi.py  settings.py  urls.py
django/ele/: asgi.py  settings.py  urls.py
django/ele/ele/: urls.py  (+2 more)
django/ele_app/: admin.py  apps.py  models.py  urls.py  views.py
pages/: 404.jsx  _app.js  balfsample.html.js  environmentalconsulting.js  home.jsx  index.jsx
server/: .dockerignore  .gitignore  Dockerfile
server/aws-lambda/: notifyFormSubmitted.js
src/components/: BalfSample.jsx  Contact.jsx  ContactForm.jsx  EnvironmentalConsulting.jsx  Footer.jsx  Header.jsx  Link.jsx  Menu.jsx  PageNotFound.jsx  Resources.jsx
src/pages/: _app.js  index.jsx  resources.js
src/styles/: App.scss
styles/: App.scss
(+10 files in other folders)
