[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Connor Couetil <couetilc@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
